sidebar collapse fix

--- a/src/components/Rsidebar/RSidebar.css
+++ b/src/components/Rsidebar/RSidebar.css
@@ -2,6 +2,8 @@
 	height: 100vh;
 	position: fixed;
 	background-color: #282c2d;
+	transition: width 0.3s ease;
+
 }
 
 .sidebar-header {
