--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -1,9 +1,9 @@
 .content {
 	background-color: #585f63;
 	position: fixed;
-	top: 0px;
-	overflow-y: scroll !important;
+	top: 0;
 	left: 250px;
+	overflow-y: scroll !important;
 	width: calc(100% - 250px);
 	height: 100vh;
 }
@@ -15,4 +15,9 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px;
+}
+
+.content.collapsed {
+	left: 80px;
+	width: 100%;
 }
